# pictovector

./: .env.example  .gitignore  LICENSE  README.md  config.py  index.html  index.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  vite.config.js
api/: __init__.py  clients.py  constants.py  llm.py  qdb.py  routes.py
backend/: qdb.py  routes.py
src/: App.jsx
src/components/: ProtectedRoute.jsx
src/context/: AuthContext.jsx  ImagesContext.jsx
src/pages/: LandingPage.jsx  LoginPage.jsx  SearchPage.jsx  SignupPage.jsx  UploadPage.jsx
src/services/: api.js
test/: test_models.py
